--- a/application/admin/index/view/login/index.html
+++ b/application/admin/index/view/login/index.html
@@ -24,7 +24,7 @@
 				<tr>
 					<td>验证码：</td>
 					<td><input type="text" name="verify" id="verify"></td>
-					<td><img src="" alt=""></td>
+					<td><div><img src="{:captcha_src()}" alt="captcha" onclick="this.src += '?rand='+Math.random()"/></div></td>
 				</tr>
 			</table>
 		</form>
@@ -38,12 +38,40 @@
 				return false;
 			}
 
+			var index;
 			$("form").ajaxSubmit({
 	            type: 'post', // 提交方式 get/post
-	            url: '{:url('login/check')}', // 需要提交的 url
+	            url: '{:url('Login/check')}', // 需要提交的 url
 	            success: function(data) { // data 保存提交后返回的数据，一般为 json 数据
 	                // 此处可对 data 作相关处理
-	                alert('提交成功！');
+	                if(data.status == 1)
+					{
+						index = layer.alert(data.info);
+						setTimeout(function(){
+							layer.close(index);
+						},2000);
+					}
+					else
+					{
+						index = layer.alert(data.info);
+						setTimeout(function(){
+							layer.close(index);
+						},2000);
+					}
+					
+					if(data.status == 1 & data.url == '')
+					{
+						setTimeout(function(){
+							window.location.reload();
+						},2000);
+					}
+					
+					if(data.status == 1 & data.url != '')
+					{
+						setTimeout(function(){
+							window.location.href = data.url;
+						},2000);
+					}
 	            }
       		});
 			return false;
