--- a/application/admin/index/view/render/index.html
+++ b/application/admin/index/view/render/index.html
@@ -4,16 +4,14 @@
 	<meta charset="UTF-8">
 	<title>后台首页</title>
 </head>
-<body>
-	<frameset rows="20%,*">
-		<frame src=""></frame>
-		<frameset cols="20%,*">
-			<frame src=""></frame>
-			<frame src=""></frame>
+	<frameset rows="80%,*" border="0">
+		<frame src="top.html" noresize="noresize" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"/>
+		<frameset cols="15%,*">
+			<frame src="" noresize="noresize" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"/>
+			<frame src="" noresize="noresize" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"/>
 		</frameset>
 	</frameset>
 	<noframes>
 		<p style="width:100%;text-align:center;">你的浏览器不支持此框架！</p>
 	</noframes>
-</body>
 </html>
