left column manage layout base complete css style not complete

--- a/application/admin/index/view/login/index.html
+++ b/application/admin/index/view/login/index.html
@@ -59,7 +59,7 @@
 						},2000);
 					}
 					
-					if(data.status == 1 & data.url == '')
+					if(data.status == 0)
 					{
 						setTimeout(function(){
 							window.location.reload();
