--- a/application/admin/index/view/render/index.html
+++ b/application/admin/index/view/render/index.html
@@ -3,12 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>后台首页</title>
+	<style>
+		#left_frame::-webkit-scrollbar{
+			width:2px;
+		}
+		#left_frame::-webkit-scrollbar-thumb{
+			background-color:#528fc7;
+		}
+	</style>
 </head>
-	<frameset rows="20%,*" border="0">
+	<frameset rows="121,*" border="0">
 		<frame src="top.html" noresize="noresize" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"/>
-		<frameset cols="25%,*">
-			<frame src="left.html" noresize="noresize" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"/>
-			<frame src="right.html" noresize="noresize" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"/>
+		<frameset cols="224,*">
+			<frame src="left.html" id="left_frame" name="left_frame" noresize="noresize" frameborder="0" marginwidth="0" marginheight="0"/>
+			<frame src="right.html" name="main_frame" noresize="noresize" frameborder="0" marginwidth="0" marginheight="0"/>
 		</frameset>
 	</frameset>
 	<noframes>
