left column base complete

--- a/application/admin/index/view/aside/lists.html
+++ b/application/admin/index/view/aside/lists.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<title>左栏目列表</title>
 	<style type="text/css">
-		.wrap{
-			background-color: #f3f1f5;
+		*{
+			padding:0;
+			margin:0;
 		}
 		.aside_title{
 			background-color: #f9f9f9;
@@ -15,44 +16,77 @@
 		.aside_title td{
 			padding-left: 30px;
 		}
-		.aside_sub{
+		.aside_sub td{
+			height:45px;
+			line-height:45px;
+		}
+		.aside_sub td{
+			text-align:center;
+		}
+		table{
 			background-color: #ffffff;
 		}
-		.aside_list td{
-			border:none;
-		}
-		tr{
+		.aside_list{
 			width:100%;
+		}
+		.chuangti{
+			width:96%;
+			margin:10px auto 10px auto;
+		}
+		.position{
+			font-family:"微软雅黑";
+			font-size:13px;
+			width:96%;
+			margin:0 auto;
+			padding-top:10px;
+			padding-left:6px;
+		}
+		.column5{
+			background:url('/public/admin/img/plus.png')no-repeat;
+			background-position:15px center;
+		}
+		a{
+			text-decoration: none;
+		}
+		.aside_list{
+			font-family: "微软雅黑";
+		}
+		.aside_list input+a{
+			font-size: 13px;
+			font-weight: 900;
 		}
 	</style>
 </head>
 <body>
 	<div class="wrap">
 		<div>
-			<table class="aside_list" cellspacing="0" cellpadding="0">
-				{volist name="list" id="vo" key="i"}
-				{php}
-					if($vo['pid'] == 0){
-				{/php}
-						</tr>
-						<tr class="aside_title">
-							<td class="column5" colspan="5">{$vo.name}</td>
-						</tr>
-						<tr class="aside_sub">
-				{php}
-					}else{
-						if($vo['sort'] == 6 || $vo['sort'] == 11 || $vo['sort'] == 16 || $vo['sort'] == 21){
-				{/php}
-							</tr><tr class="aside_sub">
-				{php}
+			<div class="position">你的位置：栏目管理 > 左栏目管理 > 列表</div>
+			<div class="chuangti">
+				<table class="aside_list" cellspacing="0" cellpadding="0">
+					{volist name="list" id="vo" key="i"}
+					{php}
+						if($vo['pid'] == 0){
+					{/php}
+							</tr>
+							<tr class="aside_title">
+								<td class="column5" colspan="5">{$vo.name}</td>
+							</tr>
+							<tr class="aside_sub">
+					{php}
+						}else{
+							if($vo['sort'] == 6 || $vo['sort'] == 11 || $vo['sort'] == 16 || $vo['sort'] == 21){
+					{/php}
+								</tr><tr class="aside_sub">
+					{php}
+							}
+					{/php}
+								<td><input type="checkbox"><a href="{:url('Aside/edit')}?id={$vo.id}">{$vo.name}</a></td>
+					{php}
 						}
-				{/php}
-							<td><input type="checkbox"><a href="">{$vo.name}</a></td>
-				{php}
-					}
-				{/php}
-				{/volist}
-			</table>
+					{/php}
+					{/volist}
+				</table>
+			</div>
 		</div>
 	</div>
 </body>
