--- a/application/admin/index/view/render/index.html
+++ b/application/admin/index/view/render/index.html
@@ -16,7 +16,7 @@
 		<frame src="top.html" noresize="noresize" frameborder="0" scrolling="no" marginwidth="0" marginheight="0"/>
 		<frameset cols="224,*">
 			<frame src="left.html" id="left_frame" name="left_frame" noresize="noresize" frameborder="0" marginwidth="0" marginheight="0"/>
-			<frame src="right.html" name="main_frame" noresize="noresize" frameborder="0" marginwidth="0" marginheight="0"/>
+			<frame src="right.html" name="main_frame" style="background-color:#f3f1f5;" noresize="noresize" frameborder="0" marginwidth="0" marginheight="0"/>
 		</frameset>
 	</frameset>
 	<noframes>
