--- a/application/admin/index/view/company/honour.html
+++ b/application/admin/index/view/company/honour.html
@@ -77,6 +77,22 @@
       display: inline-block;
       margin-right: 2px;
     }
+    .honour_list{
+      padding:10px;
+    }
+    .imgList>div+div{
+      vertical-align: middle;
+      margin-top: 5px;
+    }
+    .imgList button{
+      border:none;
+      background-color: #528fc7;
+      color: #fff;
+      font-weight: bold;
+      padding:10px 18px;
+      margin-right: 15px;
+      opacity: 0;
+    }
   </style>
 </head>
 <body>
@@ -89,7 +105,7 @@
             <td>荣誉相册展示列表：</td>
             <td>
               <div class="honour_list" id="honour_list">
-                {volist name="photo" id="vo"}
+                {volist name="photo" id="vo" offset="0" length='5'}
                   <img src="/{$vo}" alt="" style="width:227px;height:277px;">
                 {/volist}
               </div>
@@ -103,6 +119,7 @@
                 window.onload = function(){
                   var honour_list = document.getElementById("imgList");
                   $("#fileup").change(function(){
+                    $("#up").css('opacity','1');
                     var files = this.files;
                     if(files.length>{:config('image.num')}){
                       alert("每次上传的图片不能多于"+{:config('image.num')}+"张！");
@@ -139,7 +156,7 @@
             <td>上传图片预览列表</td>
             <td>
               <div class="imgList" id="imgList">
-                <button>提交上传</button>
+                <div><button id="up">提交上传</button></div>
               </div>
             </td>
           </tr>
